--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -8,7 +8,7 @@
 		<meta name="Balakrishnan" content="">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-
+	    <link rel="stylesheet" href="css/myStyle.css">
 		
 		<script type="text/javascript" src="js/spin.min.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>			
