--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -8,23 +8,36 @@
 		<meta name="Balakrishnan" content="">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-	    <link rel="stylesheet" href="css/myStyle.css">
 		
 		<script type="text/javascript" src="js/spin.min.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>			
 		
+		<style>
+			.sapMFeedListItemTextText>.sapMLnk.sapMLnkDsbl, .sapMFeedListItemTextName>.sapMLnk.sapMLnkDsbl, .sap-desktop .sapMFeedListItemTextName>.sapMLnk.sapMLnkDsbl:hover {
+color: #BE647D !important;
+}
+.sapMFeedListItemTextText {
+font-size: 0.875rem;
+color: #000000;
+word-wrap: break-word;
+}
+
+.sapMLnk, .sapMLnkDsbl, .sapMLnkMaxWidth {
+word-wrap: break-word !important;
+}
+		</style>
 
 	</head>
 	<body class="sapUiBody" role="application">
 		<div id="content"></div>
 	</body>
 	
-		<script>
+				<script>
 		 oApplication.load(	"https://openui5.hana.ondemand.com/resources/sap-ui-core.js",
 							"sap-ui-bootstrap",
 							"sap.m,sap.ui.commons",
 							"sap_bluecrystal",
 							oApplication.onSAPUI5Loaded );
-	    </script>		
+	    </script>
 	
 </html>
