--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -21,6 +21,16 @@
 			font-size: 0.8rem !important;
 			color:green !important;
 		}   		
+		
+		   .sapMFeedListItemTextName a  {
+		
+			display: block !important;
+			font-weight: bold !important;
+			
+           word-wrap:break-word !important;
+			font-size: 0.9rem !important;
+			color:red !important;
+		}   		
 		  
 		
 		</style>		
