--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -20,6 +20,7 @@
             word-wrap:break-word !important; 
 			font-size: 0.8rem !important;
 			color:green !important;
+			word-break: break-word;
 		}   		
 		
 		   .sapMFeedListItemTextName a  {
@@ -27,10 +28,19 @@
 			display: block !important;
 			font-weight: bold !important;
             word-wrap:break-word !important;
-			font-size: 0.9rem !important;
+			font-size: 0.8rem !important;
 			color:red !important;
+			word-break: break-word;
 		}   		
-		  
+		
+		.sapMFeedListItemTextName{
+		word-wrap:break-word !important;
+		word-break: break-word;
+		}
+		.sapMLnk sapMLnkDsbl sapMLnkMaxWidth{
+		word-wrap:break-word !important;
+		word-break: break-word;
+		}
 		
 		</style>		
 		
