--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -30,7 +30,10 @@
             word-wrap:break-word !important;
 			font-size: 0.8rem !important;
 			color:red !important;
-			word-break: break-word;
+			word-break: break-word !important;
+		    display: flex !important;
+			flex-wrap: wrap !important;
+            justify-content: space-around !important; 
 		}   		
 		
 		.sapMFeedListItemTextName{
