--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -15,6 +15,7 @@
 		<style type="text/css">
 
 		.sapMFeedListItemText   {
+		    background-color:transparent !important;
 			display: block !important;
 			font-weight: bold !important;
             word-wrap:break-word !important; 
@@ -24,7 +25,7 @@
 		}   		
 		
 		   .sapMFeedListItemTextName a  {
-		
+		    background-color:transparent !important;
 			display: block !important;
 			font-weight: bold !important;
             word-wrap:break-word !important;
