--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -13,6 +13,10 @@
 <script type="text/javascript" src="js/application.js"></script>
 
 		<style type="text/css">
+		#content{
+		background-image:url('images/Telangana_logo.jpg') !important;
+		
+		}
 
 		.sapMFeedListItemText   {
 		    background-color:transparent !important;
