--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -66,6 +66,9 @@
 						swipe:function(event, direction, distance, duration, fingerCount, fingerData) {
 						//	$(this).text("You swiped " + direction );
 							alert("You Swiped:" +direction);
+							alert("Finger Count: " +fingerCount);
+							alert("Finger Data: " +fingerData);
+							
 						},
 						//Default is 75px, set to 0 for demo so any distance triggers swipe
 					   threshold:0
