--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -59,7 +59,7 @@
 	<div id="content"></div>
 	
 			<script>
-				$(function() {
+/* 				$(function() {
 					//Enable swiping...
 					$("#content").swipe( {
 						//Generic swipe handler for all directions
@@ -73,7 +73,7 @@
 						//Default is 75px, set to 0 for demo so any distance triggers swipe
 					   threshold:0
 					});
-				});
+				}); */
 			</script>	
 	
 </body>
