--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -74,17 +74,17 @@
 			$(function() {
 				//Enable swiping...
 				$("#content").swipe( {
-					
-/* 					tap:function(event, target) {
+/* 					
+ 					tap:function(event, target) {
 						  alert("Inside Tap");
 						  oPopover.close();
 				        },
 
 				        doubleTap:function(event, target) {
 				        	alert("Inside Double Tap");
-				        	/*  alert("Inside Tap");doubleTapCount++;
-				            msg(target); */
-				          }, */
+				        	  alert("Inside Tap");doubleTapCount++;
+				            msg(target); 
+				          },  */
 					
 					//Generic swipe handler for all directions
 					swipe:function(event, direction, distance, duration, fingerCount, fingerData) {
