--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -58,7 +58,9 @@
 </head>
 <body class="sapUiBody" role="application">
 	<div id="content"></div>
-	<div id="container"></div>
+	<div id="container" style="overflow: scroll">
+	
+	</div>
 	
 </body>
 
