--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -58,9 +58,9 @@
 </head>
 <body class="sapUiBody" role="application">
 	
-	<div id="container" style="overflow: scroll">
-	<div id="content"></div>
-	</div>
+	<div id="container" style="overflow: scroll"></div>
+	<div id="content" style="overflow: scroll"></div>
+	
 	
 </body>
 
