--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -53,14 +53,22 @@
 		word-break: break-word;
 		}
 		
+		#diviframe{
+		  overflow: scroll;
+		}
+		#iframeiframe{
+		  overflow: scroll;
+		}
+		
 		</style>		
 		
 </head>
 <body class="sapUiBody" role="application">
 	
 	  
-	<div id="content" style="overflow: scroll"></div>
+	<div id="content" style="overflow: scroll">
 	<div id="container" style="overflow: scroll"></div>
+	</div>
 
 </body>
 
