--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -64,11 +64,10 @@
 		
 </head>
 <body class="sapUiBody" role="application">
-	
 	  
-	<div id="content" style="overflow: scroll">
+	<div id="content"> </div>
 	<div id="container" style="overflow: scroll"></div>
-	</div>
+	
 
 </body>
 
