--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -15,7 +15,37 @@
 <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
 <script type="text/javascript" src="js/application.js"></script>
 
-		<style type="text/css">
+
+<script type="text/javascript">
+	if (("standalone" in window.navigator) && window.navigator.standalone) {
+
+		var noddy, remotes = false;
+
+		document
+				.addEventListener(
+						'click',
+						function(event) {
+
+							noddy = event.target;
+
+							while (noddy.nodeName !== "A"
+									&& noddy.nodeName !== "HTML") {
+								noddy = noddy.parentNode;
+							}
+
+							if ('href' in noddy
+									&& noddy.href.indexOf('http') !== -1
+									&& (noddy.href
+											.indexOf(document.location.host) !== -1 || remotes)) {
+								event.preventDefault();
+								document.location.href = noddy.href;
+							}
+
+						}, false);
+	}
+</script>
+
+<style type="text/css">
 		#content{
 		background-image:url('images/Telangana_logo.jpg') !important;
 		
@@ -61,6 +91,9 @@
 		}
 		
 		</style>		
+		
+		
+		
 		
 </head>
 <body class="sapUiBody" role="application">
