--- a/ballzNews9999/WebContent/index.html
+++ b/ballzNews9999/WebContent/index.html
@@ -16,12 +16,12 @@
 <script type="text/javascript" src="js/application.js"></script>
 
 <style type="text/css">
+
 		#content{
-		background-image:url('images/Telangana_logo.jpg') !important;
-		
+ 		    background-image:url('images/Telangana_logo.jpg') !important;
 		}
 
-		.sapMFeedListItemText   {
+		.sapMFeedListItemText{
 		    background-color:transparent !important;
 			display: block !important;
 			font-weight: bold !important;
@@ -67,14 +67,13 @@
 		
 </head>
 <body class="sapUiBody" role="application">
-	  
-	<div id="content"> </div>
-	<div id="container" style="overflow: scroll"></div>
 	
-
+	<div id="content"> </div>
+	<!--   <div id="container" style="overflow: scroll"></div>-->
+	
 </body>
 
-<script>
+        <script>
 		 oApplication.load(	"https://openui5.hana.ondemand.com/resources/sap-ui-core.js",
 							"sap-ui-bootstrap",
 							"sap.m,sap.ui.commons",
